// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with no props 1`] = `
<div
  className="sc-eNQAEJ fiEKMC"
/>
`;

exports[`renders correctly with show and type="alert-danger" props 1`] = `
<div
  className="sc-eNQAEJ bEjdlZ"
  type="alert-danger"
>
  error message
</div>
`;

exports[`renders correctly with show and type="alert-success" props 1`] = `
<div
  className="sc-eNQAEJ bpwicB"
  type="alert-success"
>
  error message
</div>
`;

exports[`renders correctly with show and type="hint" props 1`] = `
<div
  className="sc-eNQAEJ gGKNtV"
  type="hint"
>
  error message
</div>
`;

exports[`renders correctly with show prop 1`] = `
<div
  className="sc-eNQAEJ iMnQiV"
>
  message
</div>
`;
